Card alignment fixes

--- a/src/components/Cards/ArtistCard/ArtistCard.module.scss
+++ b/src/components/Cards/ArtistCard/ArtistCard.module.scss
@@ -28,11 +28,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
     a {
       text-decoration: none;
       color: $spotify_black;
     }
+
     span {
+      margin: 8px 0;
       text-align: center;
       font-size: 16px;
       color: lighten($spotify_black, 10%);
