--- a/src/components/Lists/ArtistsList/ArtistsList.module.scss
+++ b/src/components/Lists/ArtistsList/ArtistsList.module.scss
@@ -3,4 +3,5 @@
 .base {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-around;
 }
